--- a/index.html
+++ b/index.html
@@ -37,22 +37,29 @@
                 </tr>
                 <tr>
                     <td>3</td>
+                    <td>CHABI-BARI</td>
+                    <td>Salim Ichola Okèyèmi</td>
+                    <td>chabisalimbj@gmail.com</td>
+                </tr>
+                <tr>
+                    <td>4</td>
                     <td>Da Silva</td>
                     <td>Ridwan Koladé Ronan Fortunat</td>
                     <td>dasilvaridwan8@gmail.com</td>
                 </tr>
                 <tr>
-                    <td>4</td>
+                    <td>5</td>
                     <td>HOUAGBEME</td>
                     <td>Livingston Amos</td>
                     <td>houagbemea@gmail.com</td>
                 </tr>
                 <tr>
-                    <td>5</td>
+                    <td>6</td>
                     <td>POGNON</td>
                     <td>Emmanuel Jules</td>
                     <td>emmanuelpognon2007@icloud.com</td>
                 </tr>
+                
             </tbody>
         </table>
     </div>
